--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,15 @@ open3d==0.17.0
 osgeo==0.0.1
 osr==0.0.1
 pandas==2.1.1
+Pillow==9.2.0
 Pillow==10.0.1
 pymap3d==3.0.1
 pyproj==3.6.1
-pyvista==0.42.2
-pyvistaqt==0.11.0
+pyvista==0.38.6
+pyvistaqt==0.0.0
 rasterio==1.3.8
 scikit_learn==1.3.1
-scipy==1.11.3
+scipy==1.7.3
 Shapely==2.0.1
 spectral==0.23.1
 xmltodict==0.13.0
