--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,110 @@
-cv2
+affine @ file:///home/conda/feedstock_root/build_artifacts/affine_1674245120525/work
+ansi2html==1.8.0
+asteval==0.9.31
+asttokens==2.4.0
+attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1683424013410/work
+backcall==0.2.0
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click @ file:///D:/bld/click_1692312014553/work
+click-plugins==1.1.1
+cligj @ file:///home/conda/feedstock_root/build_artifacts/cligj_1633637764473/work
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+comm==0.1.4
+ConfigArgParse==1.7
+contourpy==1.1.1
+cycler==0.12.0
+Cython==0.29.36
+dash==2.13.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+decorator==5.1.1
 dill==0.3.7
-gdal==3.7.2
-geopandas==0.14.0
-h5py==3.7.0
+executing==2.0.0
+fastjsonschema==2.18.1
+Fiona==1.9.4.post1
+Flask==2.2.5
+fonttools==4.43.0
+future==0.18.3
+GDAL @ file:///C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/GDAL-3.4.3-cp38-cp38-win_amd64.whl#sha256=47e49a1833b7db6821bf6bad875f095bdbcba83383d9e77db557854626b55940
+geopandas==0.13.2
+h5py==3.9.0
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+ipython==8.12.3
+ipywidgets==8.1.1
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter_core==5.3.2
+jupyterlab-widgets==3.0.9
+kiwisolver==1.4.5
 lmfit==1.2.2
-matplotlib==3.8.0
-Metashape==0.0.4
-numpy==1.21.6
+MarkupSafe==2.1.3
+matplotlib==3.7.3
+matplotlib-inline==0.1.6
+Metashape @ file:///C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/Metashape-2.0.3-cp37.cp38.cp39.cp310.cp311-none-win_amd64.whl#sha256=acf8e8d22407185c18ef877caf7bc5fd6f69843784738a0532662bf6cf9d6362
+nbformat==5.7.0
+nest-asyncio==1.5.8
+numpy @ file:///D:/bld/numpy_1687808486521/work
 open3d==0.17.0
-osgeo==0.0.1
-osr==0.0.1
-pandas==2.1.1
-Pillow==9.2.0
+opencv-python==4.8.1.78
+packaging==23.2
+pandas==2.0.3
+parso==0.8.3
+pickleshare==0.7.5
 Pillow==10.0.1
+pkgutil_resolve_name==1.3.10
+platformdirs==3.10.0
+plotly==5.17.0
+pooch==1.7.0
+prompt-toolkit==3.0.39
+pure-eval==0.2.2
+pyembree==0.2.11
+Pygments==2.16.1
+pykdtree==1.3.7.post0
 pymap3d==3.0.1
-pyproj==3.6.1
-pyvista==0.38.6
-pyvistaqt==0.0.0
-rasterio==1.3.8
-scikit_learn==1.3.1
-scipy==1.7.3
-Shapely==2.0.1
+pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1690737849915/work
+pyproj==3.5.0
+PyQt5==5.15.9
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.12.2
+python-dateutil==2.8.2
+pytz==2023.3.post1
+pyvista==0.42.2
+pyvistaqt==0.11.0
+pywin32==306
+QtPy==2.4.0
+rasterio @ file:///C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/rasterio-1.2.10-cp38-cp38-win_amd64.whl#sha256=0549f0a89ce2eeced1852505288300b55721706e0f260ee4ee2971a9625d459d
+referencing==0.30.2
+requests==2.31.0
+retrying==1.3.4
+rpds-py==0.10.3
+Rtree==1.0.1
+scikit-learn==1.3.1
+scipy==1.10.1
+scooby==0.7.4
+shapely==2.0.1
+six==1.16.0
+snuggs==1.4.7
 spectral==0.23.1
+stack-data==0.6.3
+tenacity==8.2.3
+threadpoolctl==3.2.0
+traitlets==5.10.1
+trimesh==3.23.5
+typing_extensions==4.8.0
+tzdata==2023.3
+uncertainties==3.1.7
+urllib3==2.0.5
+vtk==9.2.6
+wcwidth==0.2.8
+Werkzeug==2.2.3
+widgetsnbextension==4.0.9
 xmltodict==0.13.0
+zipp==3.17.0
