Implemented writing functionality for datacubes to envi format.

--- a/data/Skogn21012021/configuration.ini
+++ b/data/Skogn21012021/configuration.ini
@@ -14,6 +14,7 @@ maxraylength = 10
 bluewavelength = 460
 greenwavelength = 530
 redwavelength = 590
+radiometric_unit = muW/(cm^2*nm*sr)
 
 [HDF]
 h5dir = C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/data/Skogn21012021/H5/
@@ -39,7 +40,7 @@ radiometricframe = rawdata/hyperspectral/invalid_calibration/radiometric/radiome
 [Georeferencing]
 hsicalibfileb1 = C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/data/Skogn21012021/Calib/HSI.xml
 hsicalibfileb2 = C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/data/Skogn21012021/Calib/HSI.xml
-resolutionhyperspectralmosaic = 0.005
+resolutionhyperspectralmosaic = 0.02
 upsamplingfactor = 1
 positionglobalcrs = rawdata/navigation/position
 orientationrpy = rawdata/navigation/orientation
