Implemented functionality for parsing data to the desired format during a parsing step.

--- a/data/Skogn21012021/configuration.ini
+++ b/data/Skogn21012021/configuration.ini
@@ -3,6 +3,7 @@ pathpsx = E:/AgisoftUpdated/Agisoft/skogn.psx
 chunkname = pythonChunk2
 missiondir = C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/data/Skogn21012021/
 posepath = C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/data/Skogn21012021/pose.csv
+poseexporttype = agisoft
 modelpath = C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/data/Skogn21012021/model.ply
 texpath = C:/Users/haavasl/PycharmProjects/hyperspectral_toolchain/data/Skogn21012021/model.jpg
 isflippedrgb = True
