Updated changes to processing

--- a/data/config_examples/configuration_specim.ini
+++ b/data/config_examples/configuration_specim.ini
@@ -1,7 +1,7 @@
 [General]
 missiondir = D:/HyperspectralDataAll/UHI/2020-07-01-14-34-57-ArcticSeaIce-Ben-Lange/
 poseexporttype = h5_embedded
-modelexporttype = altimeter
+modelexporttype = dem_file
 sensor_type = Specim FX10
 texpath = None
 nodatadem = -99999
@@ -54,7 +54,6 @@ timestamp = raw/nav/timestamp
 is_global_rot = False
 rotation_reference_type = eul_ZYX
 eul_is_degrees = True
-altitude = raw/nav/altitude
 
 [HDF.hyperspectral]
 datacube = processed/radiance/dataCube
@@ -97,6 +96,7 @@ hsi_alts_msl = processed/georef/hsi_alts_msl
 
 [Orthorectification]
 resample_rgb_only = True
+resample_ancillary = True
 resamplingmethod = Nearest
 chunk_size_cube_gb = 1
 resolutionhyperspectralmosaic = 0.01
