Removed some dead meat in terms of unused modules

--- a/data/config_examples/configuration_specim.ini
+++ b/data/config_examples/configuration_specim.ini
@@ -1,25 +1,20 @@
 [General]
-missiondir = D:/HyperspectralDataAll/UHI/2020-07-01-14-34-57-ArcticSeaIce-Ben-Lange/
-poseexporttype = h5_embedded
-modelexporttype = dem_file
+mission_dir = D:/HyperspectralDataAll/HI/2020-07-01-14-34-57-NewYorkCity/
+pose_export_type = h5_embedded
+model_export_type = dem_file
 sensor_type = Specim FX10
-texpath = None
-nodatadem = -99999
+tex_path = None
 modeltype = DEM
-isflippedrgb = False
-isflippedhsi = False
-offsetx = -1
-offsety = -1
-offsetz = -1
-maxraylength = 20
-bluewavelength = 460
-greenwavelength = 530
-redwavelength = 590
+offset_x = -1
+offset_y = -1
+offset_z = -1
+max_ray_length = 20
+blue_wave_length = 460
+green_wave_length = 530
+red_wave_length = 590
 wavelength_unit = Nanometers
 radiometric_unit = (mW/cm^2*sr*um)*1000.0000
-compare_to_rgb_mosaic = False
 lever_arm_unit = m
-lab_cal_dir = D:/HyperspectralDataAll/UHI/Lab_Calibration_Data/NP/
 
 [Coordinate Reference Systems]
 proj_epsg = 4326
@@ -28,32 +23,30 @@ dem_epsg = 4326
 pos_epsg_orig = 4978
 
 [Relative Paths]
-hsicalibfile = Input/Calib/HSI_2b.xml
-hsicalibfileinit = Input/Calib/HSIinit.xml
-calibfolder = Input/Calib/
-h5dir = Input/H5/
-rgborthopath = Input/GIS/orthomosaic_cropped.tif
-dempath = Input/GIS/DEM_downsampled_deluxe.tif
-modelpath = Input/GIS/model.ply
-rgborthoreshaped = Intermediate/OrthoReshaped/
-demreshaped = Intermediate/OrthoReshaped/
-posepath = Intermediate/pose.csv
-hsicalibobj = Intermediate/Pickle/cal_obj.pkl
-rgbpointcloudpath = Output/3Dmodels/
-footprintpaths = Output/GIS/FootPrints/
-rgbcompositepaths = Output/GIS/RGBComposites/
-orthocubepaths = Output/GIS/HSIDatacubes/
-anc_paths = Output/GIS/AncillaryData/
-pathtide = Input/tidevann_nn2000_NMA.txt
+calib_folder = Input/Calib/
+h5_folder = Input/H5/
+rgb_point_cloud_folder = Output/3Dmodels/
+footprint_folder = Output/GIS/FootPrints/
+rgb_composite_folder = Output/GIS/RGBComposites/
+orthorectified_cube_folder = Output/GIS/HSIDatacubes/
+anc_folder = Output/GIS/AncillaryData/
 dem_folder = Input/GIS/
+tide_path = Input/tidevann_nn2000_NMA.txt
+dem_path = Input/GIS/DEM_downsampled_deluxe.tif
+hsi_calib_path = Input/Calib/HSI_2b.xml
+model_path = Input/GIS/model.ply
+pose_path = Intermediate/pose.csv
 
 [HDF.raw_nav]
+rotation_reference_type = eul_ZYX
 eul_zyx = raw/nav/euler_angles
+eul_is_degrees = True
 position = raw/nav/position_ecef
+quaternion = raw/nav/quaternion
+quaternion_convention = wxyz
 timestamp = raw/nav/timestamp
 is_global_rot = False
-rotation_reference_type = eul_ZYX
-eul_is_degrees = True
+
 
 [HDF.hyperspectral]
 datacube = processed/radiance/dataCube
@@ -100,29 +93,10 @@ resample_ancillary = True
 resamplingmethod = Nearest
 chunk_size_cube_gb = 1
 resolutionhyperspectralmosaic = 0.01
-interleave = bil
+interleave = bsq
 ancillary_suffix = _anc
 nodata = -9999
 raster_transform_method = north_east
-
-[Absolute Paths]
-hsicalibfile = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Input/Calib/HSI_2b.xml
-hsicalibfileinit = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Input/Calib/HSIinit.xml
-calibfolder = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Input/Calib/
-h5dir = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Input/H5/
-rgborthopath = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Input/GIS/orthomosaic_cropped.tif
-dempath = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Input/GIS/DEM_downsampled_deluxe.tif
-modelpath = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Input/GIS/model.ply
-rgborthoreshaped = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Intermediate/OrthoReshaped/
-demreshaped = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Intermediate/OrthoReshaped/
-posepath = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Intermediate/pose.csv
-hsicalibobj = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Intermediate/Pickle/cal_obj.pkl
-rgbpointcloudpath = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Output/3Dmodels/
-footprintpaths = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Output/GIS/FootPrints/
-rgbcompositepaths = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Output/GIS/RGBComposites/
-orthocubepaths = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Output/GIS/HSIDatacubes/
-pathtide = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Input/tidevann_nn2000_NMA.txt
-anc_paths = D:/HyperspectralDataAll/HI/2022-08-31-060000-Remoy-Specim/Output/GIS/AncillaryData/
 
 [HDF.rgb]
 rgb_frames = rawdata/rgb/rgbFrames
