--- a/data/config_examples/configuration_uhi.ini
+++ b/data/config_examples/configuration_uhi.ini
@@ -1,20 +1,17 @@
 [General]
-missiondir = D:/HyperspectralDataAll/UHI/2020-07-01-14-34-57-ArcticSeaIce-Ben-Lange/
-poseexporttype = h5_embedded
-modelexporttype = altimeter
+mission_dir = D:/HyperspectralDataAll/UHI/2020-07-01-14-34-57-ArcticSeaIce-Ben-Lange/
+pose_export_type = h5_embedded
+model_export_type = altimeter
 sensor_type = UHI-4
-texpath = None
-nodatadem = -99999
+tex_path = None
 modeltype = DEM
-isflippedrgb = False
-isflippedhsi = False
-offsetx = -1
-offsety = -1
-offsetz = -1
-maxraylength = 20
-bluewavelength = 460
-greenwavelength = 530
-redwavelength = 590
+offset_x = -1
+offset_y = -1
+offset_z = -1
+max_ray_length = 20
+blue_wave_length = 460
+green_wave_length = 530
+red_wave_length = 590
 wavelength_unit = Nanometers
 radiometric_unit = muW/(cm2 nm sr)
 compare_to_rgb_mosaic = False
@@ -28,23 +25,23 @@ dem_epsg = 4326
 pos_epsg_orig = 4978
 
 [Relative Paths]
-hsicalibfile = Input/Calib/HSI_2b.xml
-hsicalibfileinit = Input/Calib/HSIinit.xml
-calibfolder = Input/Calib/
-h5dir = Input/H5/
-rgborthopath = Input/GIS/dummy_orthomosaic.tif
-dempath = Input/GIS/dummy_dem.tif
-modelpath = Input/GIS/model.ply
+hsi_calib_path = Input/Calib/HSI_2b.xml
+hsi_calib_pathinit = Input/Calib/HSIinit.xml
+calib_folder = Input/Calib/
+h5_folder = Input/H5/
+rgb_ortho_path = Input/GIS/dummy_orthomosaic.tif
+dem_path = Input/GIS/dummy_dem.tif
+model_path = Input/GIS/model.ply
 rgborthoreshaped = Intermediate/OrthoReshaped/
 demreshaped = Intermediate/OrthoReshaped/
-posepath = Intermediate/pose.csv
+pose_path = Intermediate/pose.csv
 hsicalibobj = Intermediate/Pickle/cal_obj.pkl
-rgbpointcloudpath = Output/3Dmodels/
-footprintpaths = Output/GIS/FootPrints/
-rgbcompositepaths = Output/GIS/RGBComposites/
-orthocubepaths = Output/GIS/HSIDatacubes/
-anc_paths = Output/GIS/AncillaryData/
-pathtide = Input/tidevann_nn2000_NMA.txt
+rgb_point_cloud_folder = Output/3Dmodels/
+footprint_folder = Output/GIS/FootPrints/
+rgb_composite_folder = Output/GIS/RGBComposites/
+orthorectified_cube_folder = Output/GIS/HSIDatacubes/
+anc_folder = Output/GIS/AncillaryData/
+tide_path = Input/tidevann_nn2000_NMA.txt
 dem_folder = Input/GIS/
 
 [HDF.raw_nav]
