fix UHI example

--- a/data/config_examples/configuration_uhi.ini
+++ b/data/config_examples/configuration_uhi.ini
@@ -94,12 +94,16 @@ hsi_alts_msl = processed/georef/hsi_alts_msl
 
 [Orthorectification]
 resample_rgb_only = True
+resample_ancillary = True
 chunk_size_cube_gb = 1
 resolutionhyperspectralmosaic = 0.01
 interleave = bsq
 ancillary_suffix = _anc
 nodata = -9999
 raster_transform_method = north_east
+
+
+
 
 [HDF.rgb]
 rgb_frames = rawdata/rgb/rgbFrames
