Fixed Floating Point 32 Error that occured when removing positional offsets (pos0..). Current mesh format is *.vtk

--- a/data/config_examples/configuration_specim.ini
+++ b/data/config_examples/configuration_specim.ini
@@ -28,7 +28,7 @@ dem_folder = Input/GIS/
 tide_path = Input/tidevann_nn2000_NMA.txt
 dem_path = Input/GIS/DEM_downsampled_deluxe.tif
 hsi_calib_path = Input/Calib/HSI_2b.xml
-model_path = Input/GIS/model.ply
+model_path = Input/GIS/model.vtk
 pose_path = Intermediate/pose.csv
 
 [HDF.raw_nav]
