--- a/data/config_examples/configuration_uhi.ini
+++ b/data/config_examples/configuration_uhi.ini
@@ -28,7 +28,7 @@ calib_folder = Input/Calib/
 h5_folder = Input/H5/
 rgb_ortho_path = Input/GIS/dummy_orthomosaic.tif
 dem_path = Input/GIS/dummy_dem.tif
-model_path = Input/GIS/model.ply
+model_path = Input/GIS/model.vtk
 rgborthoreshaped = Intermediate/OrthoReshaped/
 demreshaped = Intermediate/OrthoReshaped/
 pose_path = Intermediate/pose.csv
