Modified UHI-template config

--- a/data/config_examples/configuration_uhi.ini
+++ b/data/config_examples/configuration_uhi.ini
@@ -1,7 +1,7 @@
 [General]
 mission_dir = D:/HyperspectralDataAll/UHI/2020-07-01-14-34-57-ArcticSeaIce-Ben-Lange/
 pose_export_type = h5_embedded
-model_export_type = altimeter
+model_export_type = dem_file
 sensor_type = UHI-4
 tex_path = None
 modeltype = DEM
