--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 **/__pycache__/
 data/world/geoids/egm08_25_backp.gtx
 data/world/geoids/egm08_25.gtx
+gref4hsi.egg-info/dependency_links.txt
+gref4hsi.egg-info/PKG-INFO
+gref4hsi.egg-info/requires.txt
+gref4hsi.egg-info/SOURCES.txt
+gref4hsi.egg-info/top_level.txt
+data/world/geoids/egm08_25.gtx
+
