--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,43 +1,37 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python package
+name: Publish Python distributions to PyPI and TestPyPI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  build:
+    python-build-n-publish:
+        name: Build and publish Python distribution
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@main
 
-    runs-on: windows 10
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.8"]
+            - name: Initialize Python 3.10
+              uses: actions/setup-python@v1
+              with:
+                python-version: 3.10
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        python -m pip install ./dependencies/GDAL-3.4.3-cp38-cp38-win_amd64.whl
-        python -m pip install ./dependencies/rasterio-1.2.10-cp38-cp38-win_amd64.whl
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
-        python ./src/tests/test_multi_ray_trace.py
+            - name: Install dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install flake8
+         
+            - name: Lint with flake8
+              run: |
+                # stop the build if there are Python syntax errors or undefined names
+                flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+                # exit-zero treats all errors as warnings.
+                flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          
+            - name: Build binary wheel and a source tarball
+              run: python setup.py sdist
+
+            - name: Publish distribution to PyPI
+              uses: pypa/gh-action-pypi-publish@master
+              with:
+                password: ${{ secrets.test_pypi_password }}
+                repository_url: https://upload.pypi.org/legacy/
