--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,5 +33,5 @@ jobs:
             - name: Publish distribution to PyPI
               uses: pypa/gh-action-pypi-publish@master
               with:
-                password: ${{ secrets.test_pypi_password }}
+                password: ${{ secrets.pypi_password }}
                 repository_url: https://upload.pypi.org/legacy/
