Updated ini files

--- a/data/config_examples/configuration_resonon.ini
+++ b/data/config_examples/configuration_resonon.ini
@@ -1,24 +1,31 @@
 [General]
 mission_dir = D:/HyperspectralDataAll/HI/2020-07-01-14-34-57-NewYorkCity/
 pose_export_type = h5_embedded
-model_export_type = dem_file 
-sensor_type = Specim FX10
-max_ray_length = 200 
-blue_wave_length = 460 
-green_wave_length = 530 
-red_wave_length = 590 
-wavelength_unit = Nanometers 
+model_export_type = dem_file
+sensor_type = Resonon Pika L
+tex_path = None
+modeltype = DEM
+offset_x = -1
+offset_y = -1
+offset_z = -1
+max_ray_length = 20
+blue_wave_length = 460
+green_wave_length = 530
+red_wave_length = 590
+wavelength_unit = Nanometers
 radiometric_unit = (mW/cm^2*sr*um)*1000.0000
+lever_arm_unit = m
+afov = 36.5
 add_geoid_corners = True
 
 [Coordinate Reference Systems]
-proj_epsg = 25832 
-geocsc_epsg_export = 4978 
+proj_epsg = 4326
+geocsc_epsg_export = 4978
+dem_epsg = 4326
 pos_epsg_orig = 4978
 dem_ref = geoid
 
 [Relative Paths]
-
 calib_folder = Input/Calib/
 h5_folder = Input/H5/
 rgb_point_cloud_folder = Output/3Dmodels/
@@ -29,14 +36,14 @@ anc_folder = Output/GIS/AncillaryData/
 dem_folder = Input/GIS/
 tide_path = Input/tidevann_nn2000_NMA.txt
 dem_path = Input/GIS/DEM_downsampled_deluxe.tif
-hsi_calib_path = Input/Calib/HSI_2b.xml
+hsi_calib_path = Input/Calib/HSI_1b.xml
 model_path = Input/GIS/model.ply
 pose_path = Intermediate/pose.csv
 
 [HDF.raw_nav]
 rotation_reference_type = eul_ZYX
 eul_zyx = raw/nav/euler_angles
-eul_is_degrees = True
+eul_is_degrees = False
 position = raw/nav/position_ecef
 quaternion = raw/nav/quaternion
 quaternion_convention = wxyz
@@ -54,6 +61,7 @@ is_calibrated = True
 folder = processed/nav/
 quaternion_ecef = processed/nav/quaternion_ref_ecef
 position_ecef = processed/nav/position_ref_ecef
+pos0 = processed/nav/position_offset
 timestamp = processed/nav/timestamp_hsi
 
 [HDF.calibration]
@@ -92,4 +100,8 @@ interleave = bsq
 ancillary_suffix = _anc
 nodata = -9999
 raster_transform_method = north_east
+
+[HDF.rgb]
+rgb_frames = rawdata/rgb/rgbFrames
+rgb_frames_timestamp = rawdata/rgb/timestamp
 
